--- a/sheyang_jeecg/pom.xml
+++ b/sheyang_jeecg/pom.xml
@@ -617,7 +617,7 @@
 	</dependencies>
 
 	<organization>
-		<name>JEECG 微云快速开发平台</name>
+		<name>射阳县</name>
 		<url>www.jeecg.org</url>
 	</organization>
 	<build>
