未开始修改role版本

--- a/sheyang_jeecg/.settings/org.eclipse.core.resources.prefs
+++ b/sheyang_jeecg/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/webpage/com/jeecg/demo/test.jsp=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
 encoding/\u5165\u95E8\u5FC5\u8BFB.txt=GBK
